# algorithms

./: .gitignore  CMakeLists.txt  README
.nix/: flake.nix
src/ch1/: CMakeLists.txt
src/ch1/mod1/: RandomWord.java
src/ch1/mod2/: flips.zig
src/ch1/mod3/: CMakeLists.txt  Deque.hxx  StackTests.cxx  app.c  bag.zig  deque.zig  linked_list.c  queue.zig  stack.c  stack.h  stack.zig  stackArray.zig  stackList.cxx  stackList.hxx  stackList.zig
src/mod1/: HelloGoodbye.java  RandomWord.java
src/part1/mod3/: CMakeLists.txt  linked_list.c
src/utils/: int_types.hxx
